# DLA-MNIST-CNN

./: Untitled.ipynb  pyproject.toml  read.md
data/: data_loader.py
models/: cnn_model.pth  model.py
notebooks/.ipynb_checkpoints/: TP Intro-etu-Henri-LEROY-checkpoint.ipynb
src/: evaluate.py  predict.py  train.py
wandb/: latest-run
wandb/run-20240919_181557-haqpzw94/: run-haqpzw94.wandb
wandb/run-20240919_181557-haqpzw94/files/: config.yaml  wandb-metadata.json
wandb/run-20240919_181818-z2uettjn/: run-z2uettjn.wandb
wandb/run-20240919_181818-z2uettjn/files/: wandb-metadata.json
wandb/run-20240919_182159-ktuaaoc5/: run-ktuaaoc5.wandb
wandb/run-20240919_182159-ktuaaoc5/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20240919_183737-vsd7tf8h/: run-vsd7tf8h.wandb
wandb/run-20240919_183737-vsd7tf8h/files/: wandb-metadata.json
wandb/run-20240919_183759-jbuibmxq/: run-jbuibmxq.wandb
wandb/run-20240919_183759-jbuibmxq/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20240919_185518-402ql5kh/: run-402ql5kh.wandb
wandb/run-20240919_185518-402ql5kh/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20240919_190555-oiq0eu42/: run-oiq0eu42.wandb
wandb/run-20240919_190555-oiq0eu42/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
