[tool.poetry]
name = "tp1"
version = "0"
description = "Premier TP Pytorch"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
torch = "^2.4.1"
torchvision = "^0.19.1"
wandb = "^0.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
